--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="middle">
                 <div class="profile">
                     <div class="img">
-                        <img src="/images/image0.jpeg" alt="profile" >
+                        <img src="./images/image0.jpeg" alt="profile" >
                     </div><br>
                     <div class="proName">
                         <h2>Md Saquib</h2>
