--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="experience">
                     <div class="cv">
                         <h2>Experience</h2>
-                        <button id="cv" onclick="window.open('/images/file.pdf');">Download CV</button>
+                        <button id="cv" class="resume" onclick="window.open('./images/file.pdf');">Download CV</button>
                     </div>
                     <div class="infoCard">
                         <div class="leftInfo">
