--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <div class="nameHead">
                     <div class="myName"><h3>Md Saquib Shakeel</h3></div>
-                    <div class="designation"><b>/</b>DEVELOPER</div>
+                    <div class="designation"><b>/</b>WEB DEVELOPER</div>
                 </div>
                 <div class="nav-links">
                     <ul>
@@ -50,7 +50,7 @@
                     </div><br>
                     <div class="line"></div><br>
                     <div class="proDesignation">
-                        DEVELOPER
+                        WEB DEVELOPER
                     </div><br>
                     <div class="social">
                         <!-- icons -->
@@ -68,7 +68,7 @@
                         <button class="project" onclick="change_tab('projects');"><b>PROJECTS</b></button>
                     </div><br><br><br>
                     <div class="para">
-                        <p>I'm a paragraph. Click here to add your own text and edit me. It's easy. Just click "Edit Text" or double click me to add your own content and make changes to the font.</p>
+                        <p>I'm currently persuing my B.Tech in Electrical Engineering (2nd year) from Jamia MIllia Islamia, New Delhi. </p>
                     </div>
                 </div>
             </div>
