--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Saquib</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;900&family=Montserrat:wght@200&family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c149e20d2b.js" crossorigin="anonymous"></script>
     
@@ -20,8 +20,9 @@
         <div class="navBar">
             <nav>
                 <div class="nameHead">
+                    <div class="square"></div>
                     <div class="myName"><h3>Md Saquib Shakeel</h3></div>
-                    <div class="designation"><b>/</b>WEB DEVELOPER</div>
+                    <div class="designation">/ WEB DEVELOPER</div>
                 </div>
                 <div class="nav-links">
                     <ul>
@@ -79,21 +80,24 @@
 
         <div class="hidden_desc" id="resume_desc">
             <div class="res">
-                <h1>Resume</h1>
+                <div class="titleContainer">
+                    <div class="square"></div>
+                    <h1>Resume</h1>
+                </div>
                 <div class="experience">
                     <div class="cv">
                         <h2>Experience</h2>
-                        <button id="cv" class="resume" onclick="window.open('./images/file.pdf');"><b>DOWNLOAD CV</b></button>
+                        <button id="cv" class="resume" onclick="window.open('./images/MD_SAQUIB_SHAKEEL_RESUME.pdf');"><b>DOWNLOAD CV</b></button>
                     </div>
                     <div class="infoCard">
                         <div class="leftInfo">
-                            <h3>Year</h3>
-                            <h3>POSITION</h3>
-                            <p>hcjjj</p>
-                            <p>cjcuck</p>
+                            <h3>Feb 2022 - Present</h3><br>
+                            WEB DEVELOPER
+                            <p>IEEE COMPUTER SOCIETY JMI</p>
+                            <p>STUDENT CHAPTER</p>
                         </div>
                         <div class="rightInfo">
-                            <p>vbjhbv aebvj ve  erg eg eg 5re g rgr ger gqe gr eg re gr grt hedrherhh reherh weh 6jwr hgr jygvk.</p>
+                            <p>IEEE CS is a technology driven society established to empower people to bring about changes in the community.</p>
                         </div>
                     </div>
                 </div>
@@ -103,38 +107,52 @@
         <!-- ----------------------------------------------PROJECT PAGE------------------------------------------------- -->
 
 
-        <div class="home hidden_desc" id="projects_desc"></div>
+        <div class="home hidden_desc" id="projects_desc">
+            <div class="res">
+                <div class="titleContainer">
+                    <div class="square"></div>
+                    <h1>Projects</h1>
+                </div>
+            </div>
+        </div>
 
         <!-- --------------------------------------------------CONTACTS PAGE------------------------------------------------ -->
 
 
-        <div class="home hidden_desc" id="contacts_desc"></div>
+        <div class="home hidden_desc" id="contacts_desc">
+            <div class="res">
+                <div class="titleContainer">
+                    <div class="square"></div>
+                    <h1>Let's talk</h1>
+                </div>
+            </div>
+        </div>
 
         <!-- -----------------------------------------------------PAGE CONTENT------------------------------------------------ -->
 
 
         <div class="home" id="page_content"></div>
 
+    </div>
         <!-- -------------------------------------------------------FOOTER----------------------------------------------------- -->
 
 
-        <footer>
-            <div class="sign">© 2021 by Md Saquib Shakeel.</div>
-            <div class="contacts">
-                <div>
-                    <h6>Write</h6><br>
-                    <a href="mailto:saquib.shakeel.1866@gmail.com">saquib.shakeel.1866@gmail.com</a>
-                </div>
-                <div>
-                    <h6>Follow</h6><br>
-                    <a href="https://twitter.com/SaquibShakeel1"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/md-saquib-shakeel-22629b202/"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://github.com/SaquibShakeel"><i class="fab fa-github"></i></a>
-                        <a href="http://www.instagram.com/mdsaquib_11"><i class="fab fa-instagram"></i></a>
-                </div>
+    <footer>
+        <div class="sign">© 2021 by Md Saquib Shakeel.</div>
+        <div class="contacts">
+            <div>
+                <h6>Write</h6><br>
+                <a href="mailto:saquib.shakeel.1866@gmail.com">saquib.shakeel.1866@gmail.com</a>
             </div>
-        </footer>
-    </div>
+            <div>
+                <h6>Follow</h6><br>
+                <a href="https://twitter.com/SaquibShakeel1"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/md-saquib-shakeel-22629b202/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/SaquibShakeel"><i class="fab fa-github"></i></a>
+                    <a href="http://www.instagram.com/mdsaquib_11"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
 
 <!-- scripts -->
 <script src="./script.js"></script>
