--- a/index.html
+++ b/index.html
@@ -92,14 +92,114 @@
                     <div class="infoCard">
                         <div class="leftInfo">
                             <h3>Feb 2022 - Present</h3><br>
-                            WEB DEVELOPER
+                            <b>WEB DEVELOPER</b>
                             <p>IEEE COMPUTER SOCIETY JMI</p>
                             <p>STUDENT CHAPTER</p>
                         </div>
                         <div class="rightInfo">
                             <p>IEEE CS is a technology driven society established to empower people to bring about changes in the community.</p>
                         </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="leftInfo">
+                            <h3>Jul 2021 - Jan 2022</h3><br>
+                            <b>HEAD OF EVENTS</b>
+                            <p>IEEE COMPUTER SOCIETY JMI</p>
+                            <p>STUDENT CHAPTER</p>
+                        </div>
+                        <div class="rightInfo">
+                            <p>IEEE CS is a technology driven society established to empower people to bring about changes in the community.</p>
+                        </div>
+                    </div><br><br>
+                    <div class="cv">
+                    <h2>Education</h2>
                     </div>
+                    <div class="infoCard">
+                        <div class="leftInfo">
+                            <h3>2022 - Present</h3><br>
+                            <b>JAMIA MILLIA ISLAMIA,<br>NEW DELHI</b>
+                            <p>B.TECH ELECTRICAL ENGINEERING</p>
+                        </div>
+                        <div class="rightInfo">
+                            <p>Jamia Millia Islamia was ranked as the best Central University of the country in the year 2020 by the ministry of education, government of India. It has completed it's century making it one of the oldest college of country.</p>
+                        </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="leftInfo">
+                            <h3>2019</h3><br>
+                            <b>ST. MICHAEL'S HIGH SCHOOL,<br>DIGHA PATNA</b>
+                            <p>12th GRADE - CBSE</p>
+                            <p>Scored 87%.</p>
+                        </div>
+                        <div class="rightInfo">
+                            <p>St. Michael's High School has an outstanding reputation for establishing high expectations and achieving excellent academic results.</p>
+                        </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="leftInfo">
+                            <h3>2017</h3><br>
+                            <b>KENDRIYA VIDYALAYA,<br>DANAPUR CANTT</b>
+                            <p>10th GRADE - CBSE</p>
+                            <p>Scored 10 cgpa.</p>
+                        </div>
+                        <div class="rightInfo">
+                            <p>The Kendriya Vidyalaya Sangathan ( lit. 'Chain of Central Schools') is a system of central government schools in India that are instituted under the aegis of the Ministry of Education, Government of India.</p>
+                        </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="skillContainer">
+                        <h2>Professional skillset</h2><br>
+                        <div class="skills">
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>HTML</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>CSS</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>JavaScript</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>MySQL</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>Java</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>Python (Programming Language)</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>Robot Operating System (ROS)</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>OpenCV</p>
+                            </div>
+                        </div><br><br>
+                        <h2>Languages</h2><br>
+                        <div class="skills">
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>English</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>Hindi</p>
+                            </div>
+                            <div class="titleContainer">
+                                <div class="square"></div>
+                                <p>Urdu</p>
+                            </div>
+                        </div>
+                    </div><br><br>
+                    </div><br><br>
                 </div>
             </div>
         </div>
@@ -121,9 +221,41 @@
 
         <div class="home hidden_desc" id="contacts_desc">
             <div class="res">
+                <div class="experience">
                 <div class="titleContainer">
                     <div class="square"></div>
                     <h1>Let's talk</h1>
+                </div>
+                <div class="infoCard">
+                    <form action="submit">
+                        <div class="nameContainer">
+                            <div class="nameLabel">
+                                <label for="fname">First Name</label>
+                                <input type="text" name="fname" id="fname">
+                            </div>
+                            <div class="nameLabel">
+                                <label for="fname">Last Name</label>
+                                <input type="text" name="fname" id="fname">
+                            </div>
+                        </div>
+                        <div class="nameLabel">
+                            <label>Email</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+                        <div class="nameLabel">
+                            <label>Subject</label>
+                            <input type="text" name="subject" id="subject">
+                        </div>
+                        <div class="nameLabel">
+                            <label>Message</label>
+                            <textarea id="message" name="message" rows="8" cols="50"></textarea>
+                        </div>
+                        <div class="nameLabel">
+                        <button class="resume" type="submit"><b>SEND</b></button>
+                        </div>
+                    </form>
+                </div>
+                <br><br>
                 </div>
             </div>
         </div>
@@ -137,7 +269,7 @@
         <!-- -------------------------------------------------------FOOTER----------------------------------------------------- -->
 
 
-    <footer>
+    <div class="footer">
         <div class="sign">© 2021 by Md Saquib Shakeel.</div>
         <div class="contacts">
             <div>
@@ -152,7 +284,7 @@
                     <a href="http://www.instagram.com/mdsaquib_11"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-    </footer>
+    </div>
 
 <!-- scripts -->
 <script src="./script.js"></script>
