--- a/index.html
+++ b/index.html
@@ -209,9 +209,35 @@
 
         <div class="home hidden_desc" id="projects_desc">
             <div class="res">
-                <div class="titleContainer">
-                    <div class="square"></div>
-                    <h1>Projects</h1>
+                <div class="experience">
+                    <div class="titleContainer">
+                        <div class="square"></div>
+                        <h1>Projects</h1>
+                    </div>
+                    <div class="infoCard">
+                        <div class="proImg">
+                            <h3>Weather App</h3>
+                            <p><a href="https://nameless-inlet-45018.herokuapp.com/"><img src="./images/weather_app.png" alt="weather-app" srcset=""></a></p>
+                        </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="proImg">
+                            <h3>My News Letter</h3>
+                            <p><a href="https://whispering-meadow-23907.herokuapp.com/"><img src="./images/news_letter.png" alt="my-news-letter" srcset=""></a></p>
+                        </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="proImg">
+                            <h3>Rock Paper Scissor</h3>
+                            <p><a href="https://saquibshakeel.github.io/RockPaperScissor/"><img src="./images/rock_paper_scissor.png" alt="rock-paper-scissor" srcset=""></a></p>
+                        </div>
+                    </div><br><br>
+                    <div class="infoCard">
+                        <div class="proImg">
+                            <h3>The Simon Game</h3>
+                            <p><a href="https://saquibshakeel.github.io/The-Simon-Game/"><img src="./images/simon_game.png" alt="the-simon-game" srcset=""></a></p>
+                        </div>
+                    </div><br><br>
                 </div>
             </div>
         </div>
