--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
         <!-- ---------------------------------------------NAVBAR--------------------------------------------- -->
 
 
-        <div class="navBar">
             <nav>
                 <div class="nameHead">
+                    <div class="titleContainer">
                     <div class="square"></div>
-                    <div class="myName"><h3>Md Saquib Shakeel</h3></div>
+                    <div class="myName"><h3>Md Saquib Shakeel</h3></div></div>
                     <div class="designation">/ WEB DEVELOPER</div>
                 </div>
-                <div class="nav-links">
-                    <ul>
-                        <li class="notselected" id="about" >ABOUT ME</li>
-                        <li class="notselected" id="resume" >RESUME</li>
-                        <li class="notselected" id="projects" >PROJECT</li>
-                        <li class="notselected" id="contacts" >CONTACT</li>
-                    </ul>
-                </div>
+                <img id="openBtn" src="./images/bars-solid.svg" alt="open" onclick="showMenu()" srcset="">
+                <ul id="menu">
+                    <li class="notselected" id="about" >ABOUT ME</li>
+                    <li class="notselected" id="resume" >RESUME</li>
+                    <li class="notselected" id="projects" >PROJECT</li>
+                    <li class="notselected" id="contacts" >CONTACT</li>
+                </ul>
+                <img id="closeBtn" src="./images/xmark-solid.svg" alt="close" onclick="hideMenu()" srcset="">
             </nav>
-        </div>
 
         <!-- -------------------------------------------ABOUT PAGE-------------------------------------------------- -->
 
