responsive about me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="home hidden_desc " id="about_desc">
             <div class="left"></div>
             <div class="middle">
-                <div class="profile">
+                <div class="profile"><br>
                     <div class="img">
                         <img src="./images/image0.jpeg" alt="profile" >
                     </div><br>
@@ -51,6 +51,10 @@
                     <div class="line"></div><br>
                     <div class="proDesignation">
                         WEB DEVELOPER
+                    </div>
+                    <div class="btnHide">
+                        <button class="resume" onclick="change_tab('resume');"><b>RESUME</b></button>
+                        <button class="project" onclick="change_tab('projects');"><b>PROJECTS</b></button>
                     </div><br>
                     <div class="social">
                         <!-- icons -->
@@ -66,7 +70,7 @@
                     <div class="btn">
                         <button class="resume" onclick="change_tab('resume');"><b>RESUME</b></button>
                         <button class="project" onclick="change_tab('projects');"><b>PROJECTS</b></button>
-                    </div><br><br><br>
+                    </div><br>
                     <div class="para">
                         <p>I'm currently persuing my B.Tech in Electrical Engineering (2nd year) from Jamia MIllia Islamia, New Delhi. </p>
                     </div>
@@ -298,11 +302,11 @@
         <div class="sign">© 2021 by Md Saquib Shakeel.</div>
         <div class="contacts">
             <div>
-                <h6>Write</h6><br>
+                <h6>Contact</h6>
                 <a href="mailto:saquib.shakeel.1866@gmail.com">saquib.shakeel.1866@gmail.com</a>
             </div>
             <div>
-                <h6>Follow</h6><br>
+                <h6>Follow</h6>
                 <a href="https://twitter.com/SaquibShakeel1"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/md-saquib-shakeel-22629b202/"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/SaquibShakeel"><i class="fab fa-github"></i></a>
