--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c149e20d2b.js" crossorigin="anonymous"></script>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-90X8CVHF58"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-90X8CVHF58');
+    </script>
 </head>
 <body>
     <div class="header">
