--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             <textarea id="message" name="message" rows="8" cols="50"></textarea>
                         </div>
                         <div class="nameLabel">
-                        <button class="resume" type="submit"><b>SEND</b></button>
+                        <button onClick="ga('send', 'event', 'Download CV', 'Button Click', 'CV download', '0');" class="resume" type="submit"><b>SEND</b></button>
                         </div>
                     </form>
                 </div>
