--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <script src="https://kit.fontawesome.com/c149e20d2b.js" crossorigin="anonymous"></script>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z23JW5XERY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJG3FKQ7PM"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-Z23JW5XERY');
+    gtag('config', 'G-LJG3FKQ7PM');
     </script>
 
 </head>
