--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saquib</title>
+    <title>Md Saquib Shakeel | Web Developer - portfolio</title>
+    <meta name="description" content="I'm currently persuing my B.Tech in Electrical Engineering (3rd year) from Jamia MIllia Islamia, New Delhi.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;900&family=Montserrat:wght@200&family=Roboto:wght@900&display=swap" rel="stylesheet">
@@ -97,7 +98,7 @@
                         <button class="project" onclick="change_tab('projects');"><b>PROJECTS</b></button>
                     </div><br>
                     <div class="para">
-                        <p>I'm currently persuing my B.Tech in Electrical Engineering (2nd year) from Jamia MIllia Islamia, New Delhi. </p>
+                        <p>I'm currently persuing my B.Tech in Electrical Engineering (3rd year) from Jamia MIllia Islamia, New Delhi. </p>
                     </div>
                 </div>
             </div>
